# Portfolio

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile_FastAPI  Dockerfile_Flask  LICENSE  README.md  alembic.ini  config.py  docker-compose.yaml  logging.conf  logging_setup.py  pyproject.toml  requirements.txt  run.py
.github/workflows/: release.yaml
.hooks/: commit-msg
.tools/: cp_env_to_env_example.sh  create_user.py  readme_cp_env_to_env_example.md
alembic/: env.py
alembic/versions/: 22204820cfbe_create_image_categories_table_and_.py  2c2dec35fe1a_update_resume_table.py  998a2e8da3e4_updated_image_table.py  a845551f5c5d_switched_from_flask_migrate_to_alembic.py  c03aa55ec574_added_resume_table.py  cbedca6e70ce_add_certification_table.py  f73bd92f689f_updated_certification_table.py
api/: __init__.py  db.py  main.py  security.py
api/crud/: about.py  contact.py  education.py  experience.py  project.py  resume.py  skill.py
api/routes/: about.py  contact.py  education.py  experiences.py  projects.py  resume.py  security.py  skills.py
api/schemas/: about.py  contact.py  education.py  experience.py  project.py  resume.py  skill.py
app/: __init__.py  admin.py  auth.py  db.py  forms.py  mail.py  models.py  views.py
app/static/css/: main.css  style_experiments.css
app/static/js/: main.js
app/templates/: about.html  base.html  contact.html  education.html  index.html  projects.html  skills.html
app/templates/auth/: login.html
app/templates/includes/: footer.html  header.html  navbar.html
app/templates/projects/: base_project_template.html  ctrl_shift_blog.html  entertaining_chatbot.html  fake_data_generator.html  my_awesome_blog.html  new_project.html  portfolio.html  project_detail.html  todo.html
cli/: __init__.py  operations.py  setup.py
docs/: Enhancements.md
migrations/versions/: 03e35137dc5d_updated_project_model_added_image_model_.py  12fdbf498e8d_initial_commit_creating_portfolio_db_.py  1b858221a19b_updated_models_ids.py  2468a4d1f398_added_contact_messages_saving.py  2baab3c46fce_added_tech_stack_field_into_projects_.py  e719b1ad59d3_updated_image_model.py  f16749a74f3b_added_project_categories_table.py
src/db/: __init__.py  models.py  services.py
